# isometric-berlin

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  conftest.py  index.html  pyproject.toml
.codex/: README.md
.gemini/: GEMINI.md
assets/: index-BFkO1pgX.js  index-Bry0Z4cW.js  index-BsTMbg9u.js  index-BszahRyI.js  index-BtnSqJOv.js  index-Bu7bsdTm.js  index-BwXgXLtv.js  index-BzzBtnbC.js  index-C6YRSDl4.js  index-CGGiMoA0.js  index-CL5bxop0.js  index-CPSGloVZ.js  index-CQsCg7PA.js  index-CSrtAO7y.js  index-Cbdf7599.js  index-CdZo2vIC.js  index-CeKcTgAo.js  index-CxD-QyGw.js  index-D4xlLcFH.js  index-D58ErDu9.js  index-D847cWlE.js  index-DJ927YEZ.js  index-DJii-FQ8.js  index-DNTfhHzP.js  index-DNcazPdD.js  index-Dz4mbyLk.js  index-DzYbomxv.css  index-GA1_OsE5.js  index-HTpffKlD.js  index-Nf37k4ck.css  index-Q-FEV6pk.css  index-qM2GRfzL.css  index-s6atC0Uv.js  index-xTbXhn3T.js  map-engine-dsFxXpnZ.js  three-engine-BABAkknd.js  three-engine-Bcn82PzZ.js  three-engine-BmJWMvH_.js  three-engine-ChtNXpnR.js  three-engine-CkhwTC0P.js  (+3 more)
docs/: README.md  agent-google-data-prompt.md  agents.md  app.md  bounds.md  correctness-crosscheck.md  data.md  deployment.md  external-geolocation-qa.md  generation.md  glossary.md  landmark-alignment.md  metric-precision.md  monument-detail.md  perplexity-hosting.md  setup.md  tiergartentunnel-geometry.md
generations/: README.md
inference/: README.md
references/: README.md
scripts/: check_release_readiness.py  package_static_site.py  serve_local_viewer.py  (+1 more)
(+276 files in other folders)
