[project]
name = "isometric-berlin"
version = "0.1.8"
description = "Generate isometric views of Berlin's Regierungsviertel from open city data, with an optional AI style pipeline."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Klotzkette" }
]
keywords = ["isometric", "pixel-art", "berlin", "regierungsviertel", "ai", "generative-art"]
dependencies = [
    # Geo
    "shapely>=2.1.2",
    "pyproj>=3.7.2",
    "geopandas>=1.0.0",
    "osmnx>=2.0.0",
    "rasterio>=1.4.0",
    # Image / rendering
    "pillow>=12.0.0",
    "numpy>=2.0.0",
    "opencv-python>=4.10.0",
    "pyvista>=0.46.0",
    "pyvips>=3.1.0",
    "matplotlib>=3.10.0",
    "contextily>=1.7.0",
    # AI
    "diffusers>=0.36.0",
    "torch>=2.5.0",
    # Infra
    "fastapi>=0.128.0",
    "flask>=3.1.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "tqdm>=4.67.0",
    "tabulate>=0.9.0",
]

[tool.ruff]
line-length = 88
indent-width = 2

[tool.ruff.format]
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/isometric_berlin"]
